--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@
   --two-colorful: #f25d73;
 }
 
+/* :root {
+  --first-light-color: #FDFDFC  ;
+  --second-light-color: #AFC6D2;
+  --dark-color: #55738A;
+  --one-colorful: #292A34;
+  --two-colorful: #D1AF34;
+} */
+
 body {
   font-family: "Noto Sans KR", sans-serif;
 }
@@ -33,6 +41,8 @@ h2 {
   color: var(--first-light-color);
 }
 
+
+
 .home-small-img > img {
   background-color: var(--first-light-color);
   border: 1px solid var(--first-light-color);
@@ -55,31 +65,19 @@ h2 {
 .about-ctn {
   background-color: var(--first-light-color);
   color: var(--dark-color);
-  text-transform: capitalize;
 }
 
-.about-skills-square {
-  padding: 1rem;
-  justify-content: center;
-  text-align: -webkit-center;
-}
-.about-skills-circle {
-  width: 5rem;
-  height: 5rem;
-  border: 1px solid var(--one-colorful);
-  border-radius: 5rem;
+
+.skills-list {
+  list-style-type: none;
 }
 
-.about-skills-circle:hover {
-  border: 2px solid var(--one-colorful);
-  background-color: var(--one-colorful);
-  border: 1px solid var(--dark-color);
-}
 
 /* ========Education and Exp =============== */
 .education-ctn {
   background-color: var(--dark-color);
   color: var(--first-light-color);
+  text-align: justify;
 }
 
 .education-board-inside {
@@ -91,18 +89,28 @@ h2 {
 .education-icon {
   color: var(--one-colorful);
 }
+
+.school-link{
+  text-decoration: none;
+  color: var(--first-light-color);
+}
+
+.school-link:hover{
+  color: var(--one-colorful);
+}
 /* ====== Portfolio ============= */
 
 .portfolio-ctn {
   background-color: var(--first-light-color);
 }
 
-.portfolio-img-box > img {
+.portfolio-img-box > a> img {
   border: 1px solid var(--two-colorful);
   border-radius: 2rem;
+  height: 300px;
 }
 
-.portfolio-img-box > img:hover {
+.portfolio-img-box > a > img:hover {
   opacity: 0.8;
 }
 
